# what-s-for-dinner

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh  clean.sh  pyproject.toml  requirements.lock.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  python-ci.yml  security.yml
.hypothesis/constants/: 179d8ab9ff7f5b48  1d1c3f1c890b48b4  266afc14e185bea5  26ccd647bf6c5bc6  31fb27d4f41170e0  443cddae44f5492d  5eaabab69fbeab9a  716b03c3690a531c  7e54851e92bd3962  a6ffebba88fc2ed8  a9fd63db50f844e4  b361a5a7f9cae817  bb43b7d7eb3425fc  d9a1a4f9cc4927a1  da39a3ee5e6b4b0d  df8813cd80266e35  ea2585b14030a924  f096719abbec6ee1  f49000da6f7f798a  f5925cfe85f99172
dinner_app/: craftable.json  crypto.py  directions.json  extra_ingredients.json  gui.py  logging_config.py  main.py  plugin_security.py  recipes.json  recipes.py  security.py  selected_ingredients.json
launcher/: Cargo.toml
launcher/.hypothesis/constants/: 107ad28712c0c79c  3582d52e34863f34  449e622e679c12e4  4d4adb0e8f2aed2c  67b0a8ccf18bf5d2  9bd1ae6606ccd247  b2301f12852abb23  c5e7bdcb714e10dd  c631bc2c5cb2c087  e7be0521f50ea982
launcher/.hypothesis/examples/04e6b3400353b141/: 99e11ec23cf49789  e5bc36d6341f4385
launcher/.hypothesis/examples/e5bc36d6341f4385/: 11575de8f387af54  34df2c4ae528d607  3ecc540882bf6b72
launcher/src/: main.rs
releases/: WhatsForDinner-linux-x64
tests/: test_crypto.py  test_e2e.py  test_fuzz_extra.py  test_fuzzing.py  test_fuzzing_aggressive.py  test_kitchen_sink_fuzz.py  test_recipes.py  test_recipes_extended.py  test_sandbox_fuzz.py  test_security.py
