[project]
name = "what-s-for-dinner"
version = "1.5.0"
description = "A recipe management and meal planning application"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "launcher/target",
    ".pytest_cache",
    "*.json",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit (security)
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S311",   # random not for crypto (we use it for recipes, not security)
    "S110",   # try-except-pass (used intentionally for window focus)
    "RUF001", # ambiguous unicode (recipe names have accents - intentional)
    "RUF003", # ambiguous unicode in comments
    "RUF012", # mutable class attributes (ClassVar - too verbose for test data)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S108"]  # allow asserts, test passwords, temp files

[tool.bandit]
exclude_dirs = ["tests", "launcher"]
skips = ["B311", "B110"]  # random for recipes, try-except-pass for GUI

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
